# tmap-api-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: GITHUB_SETUP.md  MCP_DESIGN_GUIDE.md
src/tmap_api_mcp/: __init__.py  _config.py  client.py  server.py
src/tmap_api_mcp/tools/: __init__.py  geocoding.py  poi.py  route.py
tests/: __init__.py  test_config.py  test_server.py
